@@ -29,12 +29,13 @@ jar {
 }
 tasks.withType(JavaCompile) {
 	options.incremental = true
-	sourceCompatibility = 8
-	targetCompatibility = 8
 
-//		options.compilerArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
-	options.compilerArgs.remove("--enable-preview")
+//	options.compilerArgs.remove("--enable-preview")
 	//	options.compilerArgs.add("-verbose")
+}
+
+dependencies {
+	annotationProcessor files(compilerJar)
 }
 
 
